--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="com.yaskawa.ETOMyInbox.controller.Object" xmlns:mvc="sap.ui.core.mvc" xmlns:m="sap.m" xmlns="sap.uxap"
 	xmlns:layout="sap.ui.layout" xmlns:u="sap.ui.unified" xmlns:blockcolor="wel.create.po.CreatePO.blocks" xmlns:semantic="sap.f.semantic"
-	xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout">
+	xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:tp="sap.ui.webc.main">
 	<m:Page title="Application Engineering Section" busy="{objectViewModel>/busy}" showNavButton="false" navButtonPress="onBack">
 		<m:content>
 			<ObjectPageLayout id="ObjectPageLayout" selectedSection="firstSection" subSectionLayout="{ConfigModel>/subSectionLayout}"
@@ -428,6 +428,102 @@
 							</ObjectPageSubSection>
 						</subSections>
 					</ObjectPageSection>
+					<ObjectPageSection>
+						<subSections>
+							<ObjectPageSubSection id="idOrderEng" title="Order Engineering" mode="Expanded">
+								<blocks>
+									<m:VBox width="100%">
+										<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="Scheduled Out Date"/>
+												<m:Text id="k" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<m:DatePicker id="idScheduledOutDate" placeholder="Enter Date" change="handleChange" class="sapUiSmallMarginBottom"
+														displayFormat="MM/dd/yyyy" valueFormat="MM/dd/yyyy"/>
+													<!--<m:Input value="{TabDetailsModel>/TabData/OehpsPriority}" id="idPriority"/>-->
+												</m:VBox>
+											</m:HBox>
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="Order Engineer"/>
+												<m:Text id="y" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<m:Input value="{TabDetailsModel>/TabData/OehpsDevtLevel}" placeholder="Enter Order" id="idDevLevel"/>
+												</m:VBox>
+											</m:HBox>
+										</l:Grid>
+										<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="Scheduled Hours"/>
+												<m:Text id="idShipDa2" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<m:TimePicker id="idScheduledHours" change="handleChange"></m:TimePicker>
+													<!--<m:Input value="{TabDetailsModel>/TabData/OehpsSchedEngHrs}" id="idSchedleEngHrs"/>-->
+												</m:VBox>
+											</m:HBox>
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="Actual Out Date"/>
+												<m:Text id="nj2" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<!--<m:Input value="{TabDetailsModel>/TabData/OehpsActualEngHrs}" id="idActEngHrs"/>-->
+													<m:DatePicker id="idActualOutDate" placeholder="Enter Date" change="handleChange" class="sapUiSmallMarginBottom" displayFormat="MM/dd/yyyy"
+														valueFormat="MM/dd/yyyy"/>
+												</m:VBox>
+											</m:HBox>
+										</l:Grid>
+										<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="Actual Eng Hours"/>
+												<m:Text id="idShipDa3" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<m:TimePicker id="idActualEngHours" change="handleChange" input="handleInput" formatPattern="HH:mm:ss"></m:TimePicker>
+													<!--<m:Input value="{TabDetailsModel>/TabData/OehpsSchedEngHrs}" id="idSchedleEngHrs2"/>-->
+												</m:VBox>
+											</m:HBox>
+											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
+												<m:Label width="10rem" text="B1 has been removed"/>
+												<m:Text id="nj3" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
+												<m:VBox width="100%">
+													<m:CheckBox id="idB1hasbeenremoved" selected="false"/>
+													<!--<m:Input value="{TabDetailsModel>/TabData/OehpsActualEngHrs}" id="idActEngHrs2"/>-->
+												</m:VBox>
+											</m:HBox>
+										</l:Grid>
+										<m:VBox class="sapUiSmallMarginBegin">
+											<m:Label design="Bold" text="Check List"/>
+											<m:VBox>
+												<m:CheckBox id="idMEDesign" text="ME Design" selected="{= ${TabDetailsModel>/TabData/OehpsMeDesign} === 'X' ? true : false }"/>
+												<m:CheckBox id="idEEDesign" text="EE Design" selected="{= ${TabDetailsModel>/TabData/OehpsEeDesign} === 'X' ? true : false }"/>
+												<m:CheckBox id="idSystemAnalysis" text="System Analysis"
+													selected="{= ${TabDetailsModel>/TabData/OehpsSystAnalysis} === 'X' ? true : false }"/>
+												<m:CheckBox id="idApprovedDrwnings" text="Approved Drawings Complete"
+													selected="{= ${TabDetailsModel>/TabData/OehpsAprvDrawing} === 'X' ? true : false }"/>
+												<m:CheckBox id="idApprvlRcvd" text="XXEngineering Approval Rcvd"
+													selected="{= ${TabDetailsModel>/TabData/OehpsXengAprvRcvd} === 'X' ? true : false }"/>
+												<m:CheckBox id="idKickoffMeeting" text="ZZKickoff Meeting" selected="{= ${TabDetailsModel>/TabData/OehpsZzkickoff} === 'X' ? true : false }"/>
+												<m:CheckBox id="idPreOrdrSAPBomCrtd" text="Pre-Order SAP BOMs Created"
+													selected="{= ${TabDetailsModel>/TabData/OehpsPreOrdBom} === 'X' ? true : false }"/>
+												<m:CheckBox id="idShippingSplitBOM" text="Shipping Split BOMs Created"
+													selected="{= ${TabDetailsModel>/TabData/OehpsShpSplitBom} === 'X' ? true : false }"/>
+												<m:CheckBox id="idLineBOMCreated" text="Lineup BOM Created"
+													selected="{= ${TabDetailsModel>/TabData/OehpsLineupBom} === 'X' ? true : false }"/>
+												<m:CheckBox id="BOMReviewComplete" text="BOM Review Complete"
+													selected="{= ${TabDetailsModel>/TabData/OehpsBomReview} === 'X' ? true : false }"/>
+												<m:CheckBox id="idFinalSAPBOM" text="Final SAP BOMs Loaded"
+													selected="{= ${TabDetailsModel>/TabData/OehpsFinalSapBom} === 'X' ? true : false }"/>
+												<m:CheckBox id="idRoutingCreated" text="Routings Created"
+													selected="{= ${TabDetailsModel>/TabData/OehpsRoutingsCreated} === 'X' ? true : false }"/>
+												<m:CheckBox id="idStatusRmoved" text="Z7 Status Removed"
+													selected="{= ${TabDetailsModel>/TabData/OehpsZ7StatusRemoved} === 'X' ? true : false }"/>
+												<m:CheckBox id="idZZProdKickoff" text="ZZProduction Kickoff Meeting"
+													selected="{= ${TabDetailsModel>/TabData/OehpsZzprodKickoff} === 'X' ? true : false }"/>
+												<!--</m:RadioButtonGroup>-->
+											</m:VBox>
+										</m:VBox>
+									</m:VBox>
+								</blocks>
+							</ObjectPageSubSection>
+						</subSections>
+					</ObjectPageSection>
 				</sections>
 			</ObjectPageLayout>
 		</m:content>
@@ -438,7 +534,7 @@
 					<m:ToolbarSpacer/>
 					<!--<m:Button text="Accept" type="Emphasized" id="btn-01" press="onPressAccptButton"/>-->
 					<!--<m:Button id="idCreateFGMatrl" type="Ghost" enabled="true" press="onFGMatPress" text="Create FG Material"/>-->
-					<!--<m:Button id="idSubmit" enabled="true" text="Submit" type="Emphasized" press="handleSubmitPress"/>-->
+					<m:Button id="idSubmit" enabled="true" text="Submit" type="Emphasized" press="appEngSecHdrSubmitPresss"/>
 					<!--<m:Button icon="sap-icon://sys-cancel" type="Ghost" press="onCancelPress" text="{i18n>cncl}"/>-->
 				</m:content>
 			</m:OverflowToolbar>
